--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
     "react-dom": "^16.8.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.3.0"
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "prettier": "^1.16.4"
   }
 }
